infra/k8s/01-product-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-catalog
  template:
    metadata:
      labels:
        app: product-catalog
    spec:
      containers:
        - name: product-catalog
          image: localhost:5000/product-catalog-react:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
  namespace: ecommerce
spec:
  selector:
    app: product-catalog
  ports:
    - port: 80
      targetPort: 80
