infra/k8s/02-shopping-cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-cart
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-cart
  template:
    metadata:
      labels:
        app: shopping-cart
    spec:
      containers:
        - name: shopping-cart
          image: localhost:5000/shopping-cart-vue:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-cart
  namespace: ecommerce
spec:
  selector:
    app: shopping-cart
  ports:
    - port: 80
      targetPort: 80
