infra/k8s/05-backend-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: backend-api
          image: localhost:5000/backend-api:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  namespace: ecommerce
spec:
  selector:
    app: backend-api
  ports:
    - port: 4000
      targetPort: 4000
